--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1>Calendar</h1>
     <div id="calendar"></div>
+    <button id="prevBtn"> &lt;</button>
+    <button id="nextBtn">&gt;</button>
     <script src="script.js"></script>
   </body>
 </html>
